log
Thu 20 Apr 2023 04:38:34 PM UTC: 
 treemap.c | 0
 1 file changed, 0 insertions(+), 0 deletions(-)
 tests:  1|8
total_score: 0/70
ee76437
Thu 20 Apr 2023 04:49:31 PM UTC: 
 treemap.c | 12 ++++++++++--
 1 file changed, 10 insertions(+), 2 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘createTreeMap’:
treemap.c:41:54: error: expected ‘)’ before ‘;’ token
   41 |     TreeMap * new = (TreeMap *)malloc(sizeof(TreeMap);
      |                                      ~               ^
      |                                                      )
treemap.c:52:1: error: expected ‘,’ or ‘;’ before ‘}’ token
   52 | }
      | ^
test.c:503:5: error: ‘main’ is normally a non-static function [-Werror=main]
  503 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:606:1: error: expected declaration or statement at end of input
  606 | }
      | ^
In file included from test.c:4:
treemap.c:41:15: error: unused variable ‘new’ [-Werror=unused-variable]
   41 |     TreeMap * new = (TreeMap *)malloc(sizeof(TreeMap);
      |               ^~~
test.c:607: error: control reaches end of non-void function [-Werror=return-type]
At top level:
test.c:503:5: error: ‘main’ defined but not used [-Werror=unused-function]
  503 | int main( int argc, char *argv[] ) {
      |     ^~~~
cc1: all warnings being treated as errors
Compilation failed
6fedfdb
Thu 20 Apr 2023 04:49:37 PM UTC: 
 treemap.c | 1 -
 1 file changed, 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘createTreeMap’:
treemap.c:41:54: error: expected ‘)’ before ‘;’ token
   41 |     TreeMap * new = (TreeMap *)malloc(sizeof(TreeMap);
      |                                      ~               ^
      |                                                      )
treemap.c:51:1: error: expected ‘,’ or ‘;’ before ‘}’ token
   51 | }
      | ^
test.c:503:5: error: ‘main’ is normally a non-static function [-Werror=main]
  503 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:606:1: error: expected declaration or statement at end of input
  606 | }
      | ^
In file included from test.c:4:
treemap.c:41:15: error: unused variable ‘new’ [-Werror=unused-variable]
   41 |     TreeMap * new = (TreeMap *)malloc(sizeof(TreeMap);
      |               ^~~
test.c:607: error: control reaches end of non-void function [-Werror=return-type]
At top level:
test.c:503:5: error: ‘main’ defined but not used [-Werror=unused-function]
  503 | int main( int argc, char *argv[] ) {
      |     ^~~~
cc1: all warnings being treated as errors
Compilation failed
808660c
Thu 20 Apr 2023 04:50:28 PM UTC: 
 treemap.c | 3 ---
 1 file changed, 3 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘createTreeMap’:
treemap.c:41:54: error: expected ‘)’ before ‘;’ token
   41 |     TreeMap * new = (TreeMap *)malloc(sizeof(TreeMap);
      |                                      ~               ^
      |                                                      )
treemap.c:48:1: error: expected ‘,’ or ‘;’ before ‘}’ token
   48 | }
      | ^
test.c:503:5: error: ‘main’ is normally a non-static function [-Werror=main]
  503 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:606:1: error: expected declaration or statement at end of input
  606 | }
      | ^
In file included from test.c:4:
treemap.c:41:15: error: unused variable ‘new’ [-Werror=unused-variable]
   41 |     TreeMap * new = (TreeMap *)malloc(sizeof(TreeMap);
      |               ^~~
test.c:607: error: control reaches end of non-void function [-Werror=return-type]
At top level:
test.c:503:5: error: ‘main’ defined but not used [-Werror=unused-function]
  503 | int main( int argc, char *argv[] ) {
      |     ^~~~
cc1: all warnings being treated as errors
Compilation failed
a1a8b43
Thu 20 Apr 2023 04:51:17 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|7
total_score: 5/70
b8f3a52
Thu 20 Apr 2023 04:51:26 PM UTC: 
 treemap.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  4|7
total_score: 5/70
714121d
Thu 20 Apr 2023 05:08:13 PM UTC: 
 treemap.c | 26 ++++++++++++++++++++++++--
 1 file changed, 24 insertions(+), 2 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘searchTreeMap’:
treemap.c:84:13: error: unused variable ‘current’ [-Werror=unused-variable]
   84 |   TreeNode* current = tree -> root;
      |             ^~~~~~~
cc1: all warnings being treated as errors
Compilation failed
0b89e2a
Thu 20 Apr 2023 05:08:25 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘searchTreeMap’:
treemap.c:84:17: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘->’ token
   84 |   TreeNode* tree-> current = tree -> root;
      |                 ^~
treemap.c:84:17: error: expected expression before ‘->’ token
Compilation failed
a04a809
Thu 20 Apr 2023 05:08:43 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  11|6
total_score: 15/70
3334f96
Thu 20 Apr 2023 05:28:40 PM UTC: 
 treemap.c | 12 +++++++++++-
 1 file changed, 11 insertions(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘firstTreeMap’:
treemap.c:123:12: error: returning ‘TreeNode *’ from a function with incompatible return type ‘Pair *’ [-Werror=incompatible-pointer-types]
  123 |     return node;
      |            ^~~~
cc1: all warnings being treated as errors
Compilation failed
9e17406
Thu 20 Apr 2023 05:28:50 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  13|5
total_score: 20/70
69dee0d
Thu 20 Apr 2023 05:33:05 PM UTC: 
 treemap.c | 9 +++++++++
 1 file changed, 9 insertions(+)
In file included from test.c:4:
treemap.c: In function ‘insertTreeMap’:
treemap.c:57:20: error: too many arguments to function ‘createTreeMap’
   57 |   TreeNode *node = createTreeMap(key, value);
      |                    ^~~~~~~~~~~~~
treemap.c:39:11: note: declared here
   39 | TreeMap * createTreeMap(int (*lower_than) (void* key1, void* key2))
      |           ^~~~~~~~~~~~~
treemap.c:57:20: error: initialization of ‘TreeNode *’ from incompatible pointer type ‘TreeMap *’ [-Werror=incompatible-pointer-types]
   57 |   TreeNode *node = createTreeMap(key, value);
      |                    ^~~~~~~~~~~~~
treemap.c:63:12: error: ‘return’ with a value, in function returning void [-Werror=return-type]
   63 |     return node;
      |            ^~~~
treemap.c:53:6: note: declared here
   53 | void insertTreeMap(TreeMap * tree, void* key, void * value)
      |      ^~~~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
7060839
